# xmsg

./: CMakeLists.txt  LICENSE.txt  README.md  Readme.md  package.xml
include/xmsg/: genericmessage.h  jsongenericmessage.h  protogenericmessage.h  rawmemberwrapper.h  rosgenericmessage.h
include/xmsg/Configuration/: genericmessageconfigurator.h  jsongenericconfigurator.h
src/: genericmessage.cpp  jsongenericmessage.cpp  protogenericmessage.cpp  rawmemberwrapper.cpp  rosgenericmessage.cpp
src/Configuration/: genericmessageconfigurator.cpp  jsongenericconfigurator.cpp
