<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xmsg</name>
  <version>0.1.0</version>
  <description>Library capable of wrapping complex types that support reflection</description>
  <maintainer email="denis.draca@protonmail.com">Denis Draca</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <build_depend>nlohmann-json3-dev</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
